welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: not found: value R
	if (litMessage==R){
                        ^BDRBuggle:5: error: not found: value L
	}else if (litMessage==L){
                              ^BDRBuggle:7: error: not found: value I
	}else if (litMessage==I){
                              ^BDRBuggle:9: error: reassignment to val
	}else if (litMessage=A){
                            ^BDRBuggle:11: error: not found: value litMessag
	}else if (litMessag=e=B){
                  ^BDRBuggle:13: error: not found: value C
	}else if (litMessage==C){
                              ^BDRBuggle:15: error: reassignment to val
	}else if (litMessage=Z){
                            ^BDRBuggle:17: error: not found: value Y
	}else if (litMessage==Y){
                              ^BDRBuggle:19: error: not found: value X
	}else if (litMessage==X){
                              ^